public interface Creature {
    void makeSound();
    void move();
    void eat(int energy);
}
